# testing-binary-search

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
lib/: CMakeLists.txt
lib/binsearch/: CMakeLists.txt  binsearch.cpp  binsearch.h
tests/: CMakeLists.txt  binsearch_tests.cpp
